@@ -33,6 +33,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
@@ -205,7 +206,7 @@ public class DashBoardModuleServiceImpl extends CreateOrUpdateService<DashboardM
             String templateJson = JSONUtil.toJsonStr(JSONUtil.parse(moduleDetailList));
 
             response.setContentType("text/plain;charset=UTF-8");
-            response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(String.format("数据大屏主题模块配置_%s.json", DateUtils.localDateToString(LocalDate.now())), "UTF-8"));
+            response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(String.format("数据大屏主题模块配置_%s.json", DateUtils.localDateToString(LocalDate.now())), StandardCharsets.UTF_8));
             response.addHeader("Content-Length", "" + templateJson.getBytes().length);
             OutputStream output = response.getOutputStream();
             output.write(templateJson.getBytes());
@@ -225,7 +226,7 @@ public class DashBoardModuleServiceImpl extends CreateOrUpdateService<DashboardM
             String templateStr = FileUtil.readString(file, "utf-8");
             List<ModuleDetailDto> updateModuleDetails = JSONUtil.toList(templateStr, ModuleDetailDto.class);
 
-            if (updateModuleDetails == null || updateModuleDetails.size() == 0) {
+            if (updateModuleDetails == null || updateModuleDetails.isEmpty()) {
                 throw new BusinessException("导入数据大屏模块配置失败:配置为空");
             }
 
